--- a/projeto 3/code/client/src/style.css
+++ b/projeto 3/code/client/src/style.css
@@ -59,8 +59,13 @@ button:focus-visible {
 }
 
 #app {
-	max-width: 1280px;
-	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	padding: 2rem;
 	text-align: center;
 }
 
