--- a/projeto 4/code/client/src/style.css
+++ b/projeto 4/code/client/src/style.css
@@ -58,15 +58,8 @@ button:focus-visible {
 	padding: 2em;
 }
 
-#app {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	padding: 2rem;
-	text-align: center;
+.v-form {
+	overflow: unset !important;
 }
 
 @media (prefers-color-scheme: light) {
